# ML-Anomaly-Detector

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_platforms.sh
.github/workflows/: build.yml
include/: alert.hpp  cli_monitor.hpp  config.hpp  detector.hpp  metrics.hpp  platform_metrics.hpp  stats.hpp
src/: cli_monitor_impl.cpp  main.cpp  metrics_impl.cpp  platform_factory.cpp  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
